# app/Infrastructure/Persistence/Eloquent/Models/VehicleModel.php
@@ -1,0 +1,15 @@
+<?php
+
+namespace App\Infrastructure\Persistence\Eloquent\Models;
+
+use Illuminate\Database\Eloquent\Attributes\Fillable;
+use Illuminate\Database\Eloquent\Factories\HasFactory;
+use Illuminate\Database\Eloquent\Model;
+
+#[Fillable(['customer_id', 'license_plate', 'brand', 'model', 'year'])]
+class VehicleModel extends Model
+{
+    use HasFactory;
+
+    protected $table = 'vehicles';
+}
