# app/Interfaces/Http/Requests/Vehicle/StoreVehicleRequest.php
@@ -1,0 +1,24 @@
+<?php
+
+namespace App\Interfaces\Http\Requests\Vehicle;
+
+use Illuminate\Foundation\Http\FormRequest;
+
+class StoreVehicleRequest extends FormRequest
+{
+    public function authorize(): bool
+    {
+        return true;
+    }
+
+    public function rules(): array
+    {
+        return [
+            'customer_id' => ['required', 'integer'],
+            'license_plate' => ['required', 'string', 'max:10'],
+            'brand' => ['required', 'string', 'max:100'],
+            'model' => ['required', 'string', 'max:100'],
+            'year' => ['required', 'integer', 'min:1886', 'max:'.((int) date('Y') + 1)],
+        ];
+    }
+}
